# compNeuroIntro420

./: .gitignore  Arfan_Github_Username.docx  GitHubLink  Github_Username_Arfan.docx  Github_Username_Arfan.txt  Joyce_GithubID.txt  MMerchantPullRequest  Project Signup  ProjectSignup  README.org  a1.tex  ajdurston_github_ID.txt  day1.ipynb  index.html  name.txt  outline.org  pyproject.toml  racket-notes.org  signup.txt  syl-2022.org  vim.exe.stackdump
admin/: cambridge-university-press-numeric.csl  first-day.org  to-dos.org
classNotes/: week2.md
compNeuroIntro420/: README.org
extraCredPullRequests/: Downloading Python for Windows 10.docx  backPropagation.py  csharpsolution.cs  deltaRule.py  generating_pull_request.tex  hopfield.py  iterationDEPaleske.py  mmoody.txt
finalProjects/: signup.txt  signup.txt~
gitIDs/: Amiya86.txt  Arfan_github_username.txt  LRivett  Natmay1.txt  SarahGithubID.txt  SarahJHMun.txt.dotx  attyxy.txt  brettcarterid  britt.txt  jacquelineluinstra.docx  jc-agf.txt  kaiyannameighu.txt  melody_zheng.txt  monicagrove.txt  nicolehsn.txt  nmmunce_github_id.txt  sadueckID.txt  soorta.docx  suriyaratnam.txt  swathisendhil.txt
githubIDs/: ChanelJL.txt  HanxiaoZhangX.txt  JackMoffatid.txt  PeiyaoZeng.txt  brittAnderson.txt  jordanmehravar.txt  kparkington.txt  mariabizev.txt  mclappis.txt  mygithubID  mygitid.txt  rjtryhor.txt  sungjoonPark.txt
howtos/: Downloading Python for Windows 10.docx  How_to_mult.py  cubeRoot.py  tools.org  ~$wnloading Python for Windows 10.docx
instructor-junk-drawer/: first-day.org
juliapsych420/: Manifest.toml  (+5 more)
(+262 files in other folders)
