[tool.poetry]
name = "compneurointro420"
version = "0.1.0"
description = ""
authors = ["Parmandeep Chaddha <parmandeepchaddha@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.22.0"
pytest = "^6.2.5"
pandas = "^1.3.5"
jupyter = "^1.0.0"
matplotlib = "^3.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
